<resources>
    <string name="app_name">BatteryStatus</string>
    <string name="voltage_desc">Voltage</string>
    <string name="current_desc">Current</string>
    <string name="temperature_desc">Temperature</string>
    <string name="power_desc">Power</string>
    <string name="capacity_desc">Capacity</string>
    <string name="timer_desc">Time</string>

    <string name="label_status">STATUS</string>
    <string name="label_voltage">Voltage</string>
    <string name="label_current">Current</string>
    <string name="label_temperature">Temperature</string>
    <string name="label_power">Power</string>
    <string name="label_capacity">Capacity</string>
    <string name="label_time">Time</string>

    <string name="unit_volt">V</string>
    <string name="unit_milliampere">mA</string>
    <string name="unit_celsius">°C</string>
    <string name="unit_watt">W</string>
    <string name="unit_milliampere_hour">mAh</string>
    <string name="unit_milliampere_hour_per_min">mAh/m</string>
    <string name="unit_second">s</string>

    <string name="charging">Charging</string>
    <string name="using">Using</string>

    <string name="health_good">Healthy</string>
    <string name="health_cold">Cold</string>
    <string name="health_dead">Dead</string>
    <string name="health_overheat">Overheat</string>
    <string name="health_over_voltage">Over Voltage</string>
    <string name="health_failure">Failure</string>

    <string name="plugged_ac">AC</string>
    <string name="plugged_usb">USB</string>
    <string name="plugged_wireless">Wireless</string>
    <string name="plugged_dock">Dock</string>
    <string name="charging_format">Charging (%s)</string>

    <string name="app_subtitle">Battery Monitor</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_data_log">Data Log</string>
    <string name="nav_open">Open menu</string>
    <string name="nav_close">Close menu</string>
</resources>
