<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home"
            android:checked="true" />
        <item
            android:id="@+id/nav_data_log"
            android:icon="@drawable/ic_database_0"
            android:title="@string/nav_data_log" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_0"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_information"
            android:title="@string/nav_about" />
    </group>
</menu>
